traversal.snake.Snake.scala.error
Compilation error:
Snake:6: error: value East is not a member of object plm.universe.Direction
      if (getDirection()==Direction.East){
                                    ^Snake:18: error: value West is not a member of object plm.universe.Direction
      if (getDirection()==Direction.West){
                                    ^Snake:19: error: not found: value rigth
        rigth()
        ^